게임오버씬

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>로그인 페이지 디자인</title>
+      <title>just RPS</title>
     </head>
 
     <body>
